# Gametest-for-DOMINI-GAMES

./: .gitignore  AIPlayer.cpp  AIPlayer.hpp  Board.cpp  Board.hpp  CMakeLists.txt  CMakePresets.json  ChessPiece.cpp  ChessPiece.hpp  Common.hpp  Game.cpp  Game.hpp  Gametest.cpp  IPiece.hpp  Player.cpp  Player.hpp  README.md
